# yandex-direct-api-wrapper

./: pyproject.toml
direct_api/: client.py  entities.py  exceptions.py
