[tool.poetry]
name = "yandex-direct-api-wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yandex_direct_api_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
