[tool.poetry]
name = "yandex-direct-api-wrapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "direct_api"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
